--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 .body-style {
   font-family: Monolisa, Arial, Helvetica, sans-serif;
   color: rgb(41, 42, 44);
+  margin: 20px 20px;
 }
 
 /* Navigation section style */
